Various css updates: fix scrollbars in configured meter list, fix column width in configured meter list, fix page width when creating billable meter

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -283,7 +283,7 @@ tr
       text-align: left
       width: 55%
     .allocation
-      width: 12%
+      width: 15%
       text-align: center
     .type
       width: 12%
@@ -362,7 +362,8 @@ tr
   max-height: 360px
   border: 1px solid $light-accent-color
   border-radius: 4px
-  overflow: scroll
+  overflow-y: scroll
+  overflow-x: hidden
   flex-grow: 1
 
 #configured-meter-list
